--- a/index.html
+++ b/index.html
@@ -96,7 +96,30 @@
     </header>
     <!-- Header end -->
     <main>
-
+      <!-- catagories start -->
+      <section class="container my-5">
+          <div class="row g-5">
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/bag.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12">
+              <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                <h1 class="text-white">Watch</h1>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+          </div>  
+      </section>
+       <!-- catagories end -->
 
     </main>
 
@@ -105,7 +128,7 @@
 
 
     <footer>
-      <p>555555</p>
+      
     </footer>
 
 
