--- a/index.html
+++ b/index.html
@@ -120,6 +120,105 @@
           </div>  
       </section>
        <!-- catagories end -->
+       <!-- Sheo part -->
+       <section class="container">
+         <h4>Shoes</h4>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card border-0 shadow-lg rounded h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                <h5>320$</h5>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy now</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 shadow-lg rounded h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                <h5>320$</h5>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy now</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card border-0 shadow-lg rounded h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                <h5>320$</h5>
+              </div>
+              <div class="m-3">
+                <button type="button" class="btn btn-warning">Buy now</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+       </section>
+       <!-- Backpack -->
+       <section class="container">
+        <h4>Backpack</h4>
+       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+         <div class="col">
+           <div class="card border-0 shadow-lg rounded h-100">
+             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+             <div class="card-body">
+               <h5 class="card-title">Card title</h5>
+               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+               <h5>320$</h5>
+             </div>
+             <div class="m-3">
+               <button type="button" class="btn btn-warning">Buy now</button>
+             </div>
+           </div>
+         </div>
+
+         <div class="col">
+           <div class="card border-0 shadow-lg rounded h-100">
+             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+             <div class="card-body">
+               <h5 class="card-title">Card title</h5>
+               <p class="card-text">TThis is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+               <h5>320$</h5>
+             </div>
+             <div class="m-3">
+               <button type="button" class="btn btn-warning">Buy now</button>
+             </div>
+           </div>
+         </div>
+
+         <div class="col">
+           <div class="card border-0 shadow-lg rounded h-100">
+             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+             <div class="card-body">
+               <h5 class="card-title">Card title</h5>
+               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+               <h5>320$</h5>
+             </div>
+             <div class="m-3">
+               <button type="button" class="btn btn-warning">Buy now</button>
+             </div>
+           </div>
+         </div>
+       </div>
+      </section>
+      <!-- Backpack end -->
+
 
     </main>
 
@@ -127,17 +226,8 @@
 
 
 
-    <footer>
-      
+    <footer> 
     </footer>
-
-
-
-
-
-
-
-
     <!-- bootstrap Script js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
