--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Panda commarce</title>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- castom css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header start -->
     <header>
         <!-- Nav-bar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt=""></a>
@@ -25,24 +27,24 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#Backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#Subscribe">Subscribe</a>
                   </li>
                 </ul>          
               </div>
             </div>
           </nav>
           <!-- Nav-bar -->
-          
+          <!-- slider carousel -->
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner container">
               <div class="carousel-item active">
-                  <div class="row bg-info p-5 rounded d-flex align-items-center">
+                  <div class="row panda-bg-info p-5 rounded d-flex align-items-center">
                       <div class="col-lg-7">
                         <h1>Cool Dude Headphone</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -56,7 +58,7 @@
               </div>
 
               <div class="carousel-item">
-               <div class="row bg-info p-5 rounded d-flex align-items-center">
+               <div class="row panda-bg-info p-5 rounded d-flex align-items-center">
                       <div class="col-lg-7">
                         <h1>Cool Dude TV</h1>
                         <p>This is the best headphone in the world for people who just want to waste time</p>
@@ -69,7 +71,7 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <div class="row bg-info p-5 rounded d-flex align-items-center">
+                <div class="row panda-bg-info p-5 rounded d-flex align-items-center">
                       <div class="col-lg-7">
                         <h1>X-BOX for your living room</h1>
                         <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -97,7 +99,7 @@
     <!-- Header end -->
     <main>
       <!-- catagories start -->
-      <section class="container my-5">
+      <section class="container catagories my-5">
           <div class="row g-5">
             <div class="col-lg-4 col-md-6 col-12">
               <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -120,8 +122,8 @@
           </div>  
       </section>
        <!-- catagories end -->
-       <!-- Sheo part -->
-       <section class="container">
+       <!-- Sheos part -->
+       <section class="container"id="Shoes">
          <h4>Shoes</h4>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -133,7 +135,7 @@
                 <h5>320$</h5>
               </div>
               <div class="m-3">
-                <button type="button" class="btn btn-warning">Buy now</button>
+                <button type="button" class="panda-btn-buy-now">Buy now</button>
               </div>
             </div>
           </div>
@@ -147,7 +149,7 @@
                 <h5>320$</h5>
               </div>
               <div class="m-3">
-                <button type="button" class="btn btn-warning">Buy now</button>
+                <button type="button" class="panda-btn-buy-now">Buy now</button>
               </div>
             </div>
           </div>
@@ -161,7 +163,7 @@
                 <h5>320$</h5>
               </div>
               <div class="m-3">
-                <button type="button" class="btn btn-warning">Buy now</button>
+                <button type="button" class="panda-btn-buy-now">Buy now</button>
               </div>
             </div>
           </div>
@@ -171,7 +173,7 @@
 
        </section>
        <!-- Backpack -->
-       <section class="container">
+       <section class="container my-5"id="Backpack">
         <h4>Backpack</h4>
        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
          <div class="col">
@@ -183,7 +185,7 @@
                <h5>320$</h5>
              </div>
              <div class="m-3">
-               <button type="button" class="btn btn-warning">Buy now</button>
+               <button type="button" class="panda-btn-buy-now">Buy now</button>
              </div>
            </div>
          </div>
@@ -197,7 +199,7 @@
                <h5>320$</h5>
              </div>
              <div class="m-3">
-               <button type="button" class="btn btn-warning">Buy now</button>
+               <button type="button" class="panda-btn-buy-now">Buy now</button>
              </div>
            </div>
          </div>
@@ -211,22 +213,28 @@
                <h5>320$</h5>
              </div>
              <div class="m-3">
-               <button type="button" class="btn btn-warning">Buy now</button>
+               <button type="button" class="panda-btn-buy-now">Buy now</button>
              </div>
            </div>
          </div>
        </div>
       </section>
       <!-- Backpack end -->
+      <!-- Sascribe part -->
+      <section class="container panda-bg-info d-flex align-items-center justify-content-center mb-5 " style="height: 300px;"
+      id="Subscribe">
+        <div>
+          <h3>LET'S STAY IN TOUCH</h3>
+          <h6>Get updates on sales, specials and more</h6>
+          <input type="text" class="form-control" placeholder="your email here" name="" id="">
+          <br>
+          <button type="button" class="panda-btn-buy-now">SUBMIT </button>
 
-
+        </div>
+      </section>
     </main>
-
-
-
-
-
-    <footer> 
+    <footer class="text-center"> 
+      <p><small>©2020. Panda Commerce. All rights reserved. By Tanjil it.</small></p>
     </footer>
     <!-- bootstrap Script js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
